--- a/TODO
+++ b/TODO
@@ -1,4 +1,14 @@
+General
 [] Start writing unit tests
     [] state changes
-
 [] Pull command running logic over from ruwi? or will the "run as root" guardrails be too intense?
+[] bring in config data for creating the various providers
+[] check out boilr for add-to-steam https://flathub.org/apps/io.github.philipk.boilr
+
+
+CLI
+[] just read config file once at start, calling function from lib.rs
+[] colorize output, decide which bits of spawned program output to keep in which contexts
+
+GUI
+[] restart/refresh if config file hash changes?
