--- a/TODO
+++ b/TODO
@@ -5,6 +5,9 @@ General
 [] bring in config data for creating the various providers
 [] check out boilr for add-to-steam https://flathub.org/apps/io.github.philipk.boilr
 [] check for unwraps and change to ?
+[] figure out how to give specific error messages for things like "can't be run because it's not installed"
+[] 'available' command, which just shows all available actions for all available tricks
+[] simple zenity frontend to test gui functionality
 
 Idea
 [] web frontend that just constructs a list of desired tricks and generates a .desktop that installs decktricks cli and uses it to install everything in one go
