--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ General
 [] simple zenity frontend to test gui functionality
 [] pipe command output into ActionSuccess
 [] remove uses of eprintln and use a logger
+[] implement reinstall for flatpak
 
 [] figure out how to give specific error messages for things like "can't be run because it's not installed"
 
