--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ General
 [] pipe command output into ActionSuccess
 [] remove uses of eprintln and use a logger
 [] implement reinstall for flatpak
+[] create better testing for uninstalled/installed and how it affects what's available for e.g. flatpak
 
 [] figure out how to give specific error messages for things like "can't be run because it's not installed"
 
