--- a/TODO
+++ b/TODO
@@ -1,9 +1,21 @@
+Providers
+[] https://github.com/moraroy/NonSteamLaunchers-On-Steam-Deck
+    [] individual launchers from within this?
+[] check out "setup helpers" in steamfork: https://github.com/SteamFork/SteamForkTools/tree/main/bin
+    [] especially for Decky
+[] implement basic command provider
+    [] just takes cmd and args in the json, and nothing in code
+    [] .... although, a simple command line would maybe be helpful in game mode?
+
+Network/Updates
+[] MOTD
+[] Code updates
+[] Config updates
+[] GUI handling updates how?
+
 General
 [] switch checks over to https://docs.rs/predicates/latest/predicates/
     [] use them in a default trait method in TrickProvider?
-[] Start writing unit tests
-[] Pull command running logic over from ruwi? or will the "run as root" guardrails be too intense?
-[] check out boilr for add-to-steam https://flathub.org/apps/io.github.philipk.boilr
 [] simple zenity frontend to test gui functionality
 [] implement reinstall for flatpak
 [] test in chimeraos and steamfork
@@ -14,19 +26,15 @@ General
 
 [] dependencies between tricks
 
+Misc
+[] check out boilr for add-to-steam https://flathub.org/apps/io.github.philipk.boilr
+
 Idea
 [] web frontend that just constructs a list of desired tricks and generates a .desktop that installs decktricks cli and uses it to install everything in one go
 
 CLI
-[] just read config file once at start, calling function from lib.rs
 [] colorize output, decide which bits of spawned program output to keep in which contexts
 [] run: pass remaining args after cmdname or -- through to the run command
 
 GUI
 [] restart/refresh if config file hash changes?
-
-Providers
-[] https://github.com/moraroy/NonSteamLaunchers-On-Steam-Deck
-    [] individual launchers from within this?
-[] check out "setup helpers" in steamfork: https://github.com/SteamFork/SteamForkTools/tree/main/bin
-     [] especially for Decky
