--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Network/Updates
 [] GUI handling updates how?
 
 General
+[] unit test *all* uses of syscommand - there should be no cfg(test) remaining
 [] remove all todo!, and panic!
 [] implement all not_implemented
 [] switch checks over to https://docs.rs/predicates/latest/predicates/
@@ -39,3 +40,6 @@ CLI
 
 GUI
 [] restart/refresh if config file hash changes?
+
+Tips:
+[] Use STEAM+Rstick to move mouse, STEAM+R2/R1/L2/L1 to click
