--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ Comms
 [] use https://github.com/wez/wezterm as inspiration for the gh page
 
 Providers
-[] emudeck
+[] emudeck: https://www.emudeck.com/EmuDeck.desktop
 [] kodi (for streaming) (tv.kodi.Kodi)
 [] minecraft (prism launcher?) (org.prismlauncher.PrismLauncher / com.mojang.Minecraft)
 [] system commands - *file browser* (what's the name in plasma)
