--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Prerequisites:
+    [] flatpak
+
+
 [] make cargo test in base repo run tests in GUI as well (and vice-versa?)
 [] full-system-context-not-needed flag for certain commands?
 [] bind A to ui_accept
