--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ Prerequisites:
     [] flatpak
     [] systemctl
 
+[] cargo clippy in CI
+[] make Dockerfile pull 'latest' instead of main
 [] curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --help
 [] cargo update
 [] implement general updates!
