--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ Prerequisites:
 Add to steam:
     [] make gui take a DECKTRICKS_INITIALIZATION that just boots up in headless mode, adds to steam, and quits (or package up the CLI)
 
+[] make calls to std::fs test-safe
 [] make decktricks stable installer point to discord or reddit, and beta point to github?
 [] make "decktricks gui" default to godot, run "decktricks-gui"
 [] cargo clippy in CI
@@ -188,6 +189,7 @@ General
 
 Code
 [] Codemod for? to collect::<Result<_, _>>
+[] unique error codes for each possible error
 
 Misc
 [] check out boilr for add-to-steam https://flathub.org/apps/io.github.philipk.boilr
